@@ -15,6 +15,7 @@ Version 1.3.15+svn:
    * Moved destruction of conditional object before the mutex. This should 
      fix random crash in network disconnect.
    * Fixed reference to invalid pointer in attack::attack
+   * pressing shift affects acceleration immediately
 
 Version 1.3.15:
  * language and i18n:
